Added code to retrieve stocks basic info

--- a/prototypes/stock-historical-data.ipynb
+++ b/prototypes/stock-historical-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,38 +104,28 @@
        " 'maxAge': 86400,\n",
        " 'priceHint': 2,\n",
        " 'previousClose': 27.15,\n",
-       " 'open': 27.11,\n",
-       " 'dayLow': 26.75,\n",
-       " 'dayHigh': 27.12,\n",
        " 'regularMarketPreviousClose': 27.15,\n",
-       " 'regularMarketOpen': 27.11,\n",
-       " 'regularMarketDayLow': 26.75,\n",
-       " 'regularMarketDayHigh': 27.12,\n",
        " 'dividendRate': 2.52,\n",
-       " 'dividendYield': 0.092700005,\n",
+       " 'dividendYield': 0.0936,\n",
        " 'exDividendDate': 1726099200,\n",
        " 'payoutRatio': 0.3023,\n",
        " 'fiveYearAvgDividendYield': 4.5,\n",
        " 'beta': 0.774,\n",
        " 'trailingPE': 3.8760805,\n",
        " 'forwardPE': 3.8816738,\n",
-       " 'volume': 19055500,\n",
-       " 'regularMarketVolume': 19055500,\n",
-       " 'averageVolume': 14714849,\n",
-       " 'averageVolume10days': 15557470,\n",
-       " 'averageDailyVolume10Day': 15557470,\n",
-       " 'bid': 26.86,\n",
-       " 'ask': 26.88,\n",
+       " 'averageVolume': 14846726,\n",
+       " 'averageVolume10days': 15971290,\n",
+       " 'averageDailyVolume10Day': 15971290,\n",
+       " 'bid': 30.96,\n",
        " 'marketCap': 153544114176,\n",
-       " 'fiftyTwoWeekLow': 23.3,\n",
        " 'fiftyTwoWeekHigh': 29.955,\n",
        " 'priceToSalesTrailing12Months': 1.3837705,\n",
-       " 'fiftyDayAverage': 27.7792,\n",
-       " 'twoHundredDayAverage': 27.82875,\n",
+       " 'fiftyDayAverage': 27.7794,\n",
+       " 'twoHundredDayAverage': 27.8261,\n",
        " 'trailingAnnualDividendRate': 2.688,\n",
        " 'trailingAnnualDividendYield': 0.09900553,\n",
        " 'currency': 'BRL',\n",
-       " 'enterpriseValue': 745638658048,\n",
+       " 'enterpriseValue': 744211677184,\n",
        " 'profitMargins': 0.27981,\n",
        " 'floatShares': 2584327583,\n",
        " 'sharesOutstanding': 5707959808,\n",
@@ -154,9 +144,9 @@
        " 'pegRatio': 1.31,\n",
        " 'lastSplitFactor': '2:1',\n",
        " 'lastSplitDate': 1713225600,\n",
-       " 'enterpriseToRevenue': 6.72,\n",
-       " '52WeekChange': 0.15679586,\n",
-       " 'SandP52WeekChange': 0.34083736,\n",
+       " 'enterpriseToRevenue': 6.707,\n",
+       " '52WeekChange': 0.10133064,\n",
+       " 'SandP52WeekChange': 0.32295227,\n",
        " 'lastDividendValue': 0.186602,\n",
        " 'lastDividendDate': 1726099200,\n",
        " 'exchange': 'SAO',\n",
@@ -194,7 +184,7 @@
        " 'trailingPegRatio': None}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
