Organised the code to gather data from different companies¨

--- a/prototypes/stock-basic-info.ipynb
+++ b/prototypes/stock-basic-info.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,124 +69,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>08.773.135/0001-00</td>\n",
-       "      <td>2W ECOBANK S.A.</td>\n",
-       "      <td>2W ECOBANK S.A.</td>\n",
-       "      <td>2020-10-29</td>\n",
-       "      <td>2007-03-23</td>\n",
+       "      <th>213</th>\n",
+       "      <td>28.195.667/0001-06</td>\n",
+       "      <td>BANCO ABC BRASIL S/A</td>\n",
+       "      <td>BANCO ABC BRASIL S/A</td>\n",
+       "      <td>2007-07-23</td>\n",
+       "      <td>1983-12-27</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ATIVO</td>\n",
-       "      <td>2020-10-29</td>\n",
-       "      <td>25224</td>\n",
+       "      <td>2007-07-23</td>\n",
+       "      <td>20958</td>\n",
        "      <td>...</td>\n",
+       "      <td>SP</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4711130.0</td>\n",
+       "      <td>1453000.0</td>\n",
        "      <td>11</td>\n",
-       "      <td>39574900.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>juridico@2wecobank.com.br</td>\n",
-       "      <td>52.803.244/0001-06</td>\n",
-       "      <td>KPMG AUDITORES ASSOCIADOS</td>\n",
+       "      <td>31702186.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>31702001.0</td>\n",
+       "      <td>ri@abcbrasil.com.br</td>\n",
+       "      <td>61.366.936/0001-25</td>\n",
+       "      <td>ERNST &amp; YOUNG AUDITORES INDEPENDENTES S/S LTDA.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11.396.633/0001-87</td>\n",
-       "      <td>3A COMPANHIA SECURITIZADORA</td>\n",
-       "      <td>TRIPLO A  COMPANHIA SECURITIZADORA</td>\n",
-       "      <td>2010-03-08</td>\n",
-       "      <td>2009-11-03</td>\n",
-       "      <td>2015-12-18</td>\n",
-       "      <td>Cancelamento Voluntário - IN CVM 480/09</td>\n",
-       "      <td>CANCELADA</td>\n",
-       "      <td>2015-12-18</td>\n",
-       "      <td>21954</td>\n",
-       "      <td>...</td>\n",
-       "      <td>RJ</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>20020000.0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>22338867.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>22338867.0</td>\n",
-       "      <td>juridico@triploasec.com.br</td>\n",
-       "      <td>60.525.706/0001-07</td>\n",
-       "      <td>MOORE STEPHENS LIMA LUCCHESI AUDITORES INDEPEN...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12.091.809/0001-55</td>\n",
-       "      <td>3R PETROLEUM OLÉO E GÁS S.A.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "      <td>2010-06-08</td>\n",
+       "      <th>228</th>\n",
+       "      <td>61.186.680/0001-74</td>\n",
+       "      <td>BANCO BMG S/A</td>\n",
+       "      <td>BANCO BMG S/A</td>\n",
+       "      <td>2018-12-17</td>\n",
+       "      <td>1965-03-25</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ATIVO</td>\n",
-       "      <td>2020-11-09</td>\n",
-       "      <td>25291</td>\n",
+       "      <td>2018-12-17</td>\n",
+       "      <td>24600</td>\n",
+       "      <td>...</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4543000.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30672245.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ri@bancobmg.com.br</td>\n",
+       "      <td>61.562.112/0001-20</td>\n",
+       "      <td>PRICEWATERHOUSECOOPERS AUDITORES INDEPENDENTES...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>234</th>\n",
+       "      <td>60.746.948/0001-12</td>\n",
+       "      <td>BANCO BRADESCO S.A.</td>\n",
+       "      <td>BANCO BRADESCO S.A.</td>\n",
+       "      <td>1977-07-20</td>\n",
+       "      <td>1943-03-02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>1977-07-20</td>\n",
+       "      <td>906</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>22250145.0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>34755555.0</td>\n",
+       "      <td>6029900.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>36844011.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ri@bravaenergia.com</td>\n",
+       "      <td>diretoria_ri@bradesco.com.br</td>\n",
        "      <td>57.755.217/0001-29</td>\n",
        "      <td>KPMG AUDITORES INDEPENDENTES LTDA.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01.547.749/0001-16</td>\n",
-       "      <td>521 PARTICIPAÇOES S.A. - EM LIQUIDAÇÃO EXTRAJU...</td>\n",
-       "      <td>521 PARTICIPAÇÕES S/A</td>\n",
-       "      <td>1997-07-11</td>\n",
-       "      <td>1996-07-30</td>\n",
+       "      <th>235</th>\n",
+       "      <td>30.306.294/0001-45</td>\n",
+       "      <td>BANCO BTG PACTUAL S/A</td>\n",
+       "      <td>BANCO UBS PACTUAL S/A</td>\n",
+       "      <td>2011-11-10</td>\n",
+       "      <td>1979-01-18</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ATIVO</td>\n",
-       "      <td>1997-07-11</td>\n",
-       "      <td>16330</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13.859.935/0001-70</td>\n",
-       "      <td>BAKER TILLY BRASIL RJ AUDITORES INDEPENDENTES ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01.851.771/0001-55</td>\n",
-       "      <td>524 PARTICIPAÇOES SA</td>\n",
-       "      <td>524 PARTICIPACOES SA</td>\n",
-       "      <td>1997-05-30</td>\n",
-       "      <td>1997-04-02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ATIVO</td>\n",
-       "      <td>1997-05-30</td>\n",
-       "      <td>16284</td>\n",
+       "      <td>2011-11-10</td>\n",
+       "      <td>22616</td>\n",
        "      <td>...</td>\n",
        "      <td>RJ</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>20020010.0</td>\n",
+       "      <td>22250040.0</td>\n",
        "      <td>21</td>\n",
-       "      <td>38043700.0</td>\n",
+       "      <td>32629600.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>gar@opportunity.com.br</td>\n",
-       "      <td>40.262.602/0001-31</td>\n",
-       "      <td>BKR - LOPES, MACHADO AUDITORES</td>\n",
+       "      <td>ri@btgpactual.com</td>\n",
+       "      <td>61.562.112/0001-20</td>\n",
+       "      <td>PRICEWATERHOUSECOOPERS AUDITORES INDEPENDENTES...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>04.902.979/0001-44</td>\n",
+       "      <td>BANCO DA AMAZÔNIA S.A.</td>\n",
+       "      <td>BANCO DA AMAZONIA S.A.</td>\n",
+       "      <td>1977-07-20</td>\n",
+       "      <td>1942-07-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ATIVO</td>\n",
+       "      <td>1977-07-20</td>\n",
+       "      <td>922</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>66017910.0</td>\n",
+       "      <td>91</td>\n",
+       "      <td>40082021.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fabio.maeda@basa.com.br</td>\n",
+       "      <td>61.562.112/0001-20</td>\n",
+       "      <td>PRICEWATERHOUSECOOPERS AUDITORES INDEPENDENTES...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -194,58 +194,51 @@
        "</div>"
       ],
       "text/plain": [
-       "             CNPJ_CIA                                       DENOM_SOCIAL  \\\n",
-       "0  08.773.135/0001-00                                    2W ECOBANK S.A.   \n",
-       "1  11.396.633/0001-87                        3A COMPANHIA SECURITIZADORA   \n",
-       "2  12.091.809/0001-55                       3R PETROLEUM OLÉO E GÁS S.A.   \n",
-       "3  01.547.749/0001-16  521 PARTICIPAÇOES S.A. - EM LIQUIDAÇÃO EXTRAJU...   \n",
-       "4  01.851.771/0001-55                               524 PARTICIPAÇOES SA   \n",
+       "               CNPJ_CIA            DENOM_SOCIAL            DENOM_COMERC  \\\n",
+       "213  28.195.667/0001-06    BANCO ABC BRASIL S/A    BANCO ABC BRASIL S/A   \n",
+       "228  61.186.680/0001-74           BANCO BMG S/A           BANCO BMG S/A   \n",
+       "234  60.746.948/0001-12     BANCO BRADESCO S.A.     BANCO BRADESCO S.A.   \n",
+       "235  30.306.294/0001-45   BANCO BTG PACTUAL S/A   BANCO UBS PACTUAL S/A   \n",
+       "241  04.902.979/0001-44  BANCO DA AMAZÔNIA S.A.  BANCO DA AMAZONIA S.A.   \n",
        "\n",
-       "                         DENOM_COMERC      DT_REG    DT_CONST   DT_CANCEL  \\\n",
-       "0                     2W ECOBANK S.A.  2020-10-29  2007-03-23         NaN   \n",
-       "1  TRIPLO A  COMPANHIA SECURITIZADORA  2010-03-08  2009-11-03  2015-12-18   \n",
-       "2                                 NaN  2020-11-09  2010-06-08         NaN   \n",
-       "3               521 PARTICIPAÇÕES S/A  1997-07-11  1996-07-30         NaN   \n",
-       "4                524 PARTICIPACOES SA  1997-05-30  1997-04-02         NaN   \n",
+       "         DT_REG    DT_CONST DT_CANCEL MOTIVO_CANCEL    SIT  DT_INI_SIT  \\\n",
+       "213  2007-07-23  1983-12-27       NaN           NaN  ATIVO  2007-07-23   \n",
+       "228  2018-12-17  1965-03-25       NaN           NaN  ATIVO  2018-12-17   \n",
+       "234  1977-07-20  1943-03-02       NaN           NaN  ATIVO  1977-07-20   \n",
+       "235  2011-11-10  1979-01-18       NaN           NaN  ATIVO  2011-11-10   \n",
+       "241  1977-07-20  1942-07-09       NaN           NaN  ATIVO  1977-07-20   \n",
        "\n",
-       "                             MOTIVO_CANCEL        SIT  DT_INI_SIT  CD_CVM  \\\n",
-       "0                                      NaN      ATIVO  2020-10-29   25224   \n",
-       "1  Cancelamento Voluntário - IN CVM 480/09  CANCELADA  2015-12-18   21954   \n",
-       "2                                      NaN      ATIVO  2020-11-09   25291   \n",
-       "3                                      NaN      ATIVO  1997-07-11   16330   \n",
-       "4                                      NaN      ATIVO  1997-05-30   16284   \n",
+       "     CD_CVM  ... UF_RESP PAIS_RESP    CEP_RESP DDD_TEL_RESP    TEL_RESP  \\\n",
+       "213   20958  ...      SP       NaN   1453000.0           11  31702186.0   \n",
+       "228   24600  ...      SP       NaN   4543000.0           11  30672245.0   \n",
+       "234     906  ...     NaN       NaN   6029900.0           11  36844011.0   \n",
+       "235   22616  ...      RJ       NaN  22250040.0           21  32629600.0   \n",
+       "241     922  ...      PA       NaN  66017910.0           91  40082021.0   \n",
        "\n",
-       "   ... UF_RESP PAIS_RESP    CEP_RESP DDD_TEL_RESP    TEL_RESP DDD_FAX_RESP  \\\n",
-       "0  ...     NaN       NaN   4711130.0           11  39574900.0          NaN   \n",
-       "1  ...      RJ       NaN  20020000.0           21  22338867.0         21.0   \n",
-       "2  ...     NaN       NaN  22250145.0           21  34755555.0          NaN   \n",
-       "3  ...     NaN       NaN         NaN          NaN         NaN          NaN   \n",
-       "4  ...      RJ       NaN  20020010.0           21  38043700.0          NaN   \n",
+       "    DDD_FAX_RESP    FAX_RESP                    EMAIL_RESP  \\\n",
+       "213         11.0  31702001.0           ri@abcbrasil.com.br   \n",
+       "228          NaN         NaN            ri@bancobmg.com.br   \n",
+       "234          NaN         NaN  diretoria_ri@bradesco.com.br   \n",
+       "235          NaN         NaN             ri@btgpactual.com   \n",
+       "241          NaN         NaN       fabio.maeda@basa.com.br   \n",
        "\n",
-       "     FAX_RESP                  EMAIL_RESP        CNPJ_AUDITOR  \\\n",
-       "0         NaN   juridico@2wecobank.com.br  52.803.244/0001-06   \n",
-       "1  22338867.0  juridico@triploasec.com.br  60.525.706/0001-07   \n",
-       "2         NaN         ri@bravaenergia.com  57.755.217/0001-29   \n",
-       "3         NaN                         NaN  13.859.935/0001-70   \n",
-       "4         NaN      gar@opportunity.com.br  40.262.602/0001-31   \n",
-       "\n",
-       "                                             AUDITOR  \n",
-       "0                          KPMG AUDITORES ASSOCIADOS  \n",
-       "1  MOORE STEPHENS LIMA LUCCHESI AUDITORES INDEPEN...  \n",
-       "2                 KPMG AUDITORES INDEPENDENTES LTDA.  \n",
-       "3  BAKER TILLY BRASIL RJ AUDITORES INDEPENDENTES ...  \n",
-       "4                     BKR - LOPES, MACHADO AUDITORES  \n",
+       "           CNPJ_AUDITOR                                            AUDITOR  \n",
+       "213  61.366.936/0001-25    ERNST & YOUNG AUDITORES INDEPENDENTES S/S LTDA.  \n",
+       "228  61.562.112/0001-20  PRICEWATERHOUSECOOPERS AUDITORES INDEPENDENTES...  \n",
+       "234  57.755.217/0001-29                 KPMG AUDITORES INDEPENDENTES LTDA.  \n",
+       "235  61.562.112/0001-20  PRICEWATERHOUSECOOPERS AUDITORES INDEPENDENTES...  \n",
+       "241  61.562.112/0001-20  PRICEWATERHOUSECOOPERS AUDITORES INDEPENDENTES...  \n",
        "\n",
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df[(df[\"SIT\"] == \"ATIVO\") & (df[\"SETOR_ATIV\"] == \"Bancos\")].head()"
    ]
   },
   {
