Include code to scrap dividends

--- a/prototypes/stock-historical-data.ipynb
+++ b/prototypes/stock-historical-data.ipynb
@@ -37,11 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbas3 = yf.Ticker(get_yf_ticker(df[\"TICKERS\"].iloc[0]))"
+    "tickers = df[\"TICKERS\"].iloc[1]\n",
+    "\n",
+    "bbas3 = yf.Ticker(get_yf_ticker(tickers))"
    ]
   },
   {
@@ -674,37 +676,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sector = yf.Sector('financial-services')"
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tk = get_main_ticker(tickers)\n",
+    "url = \"https://www.dadosdemercado.com.br/acoes/\" + tk + \"/dividendos\"\n",
+    "page = requests.get(url)\n",
+    "\n",
+    "soup = BeautifulSoup(page.content, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>VALUE</th>\n",
+       "      <th>TYPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-09-11</td>\n",
+       "      <td>0.186602</td>\n",
+       "      <td>JCP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-08-21</td>\n",
+       "      <td>0.314481</td>\n",
+       "      <td>JCP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-08-21</td>\n",
+       "      <td>0.151861</td>\n",
+       "      <td>Dividendo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-08-21</td>\n",
+       "      <td>0.005606</td>\n",
+       "      <td>Dividendo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-08-21</td>\n",
+       "      <td>0.002707</td>\n",
+       "      <td>Dividendo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>2007-12-25</td>\n",
+       "      <td>0.071121</td>\n",
+       "      <td>JCP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>2007-11-13</td>\n",
+       "      <td>0.042861</td>\n",
+       "      <td>Dividendo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>2007-09-21</td>\n",
+       "      <td>0.067322</td>\n",
+       "      <td>JCP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>2007-08-14</td>\n",
+       "      <td>0.019767</td>\n",
+       "      <td>Dividendo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>2007-06-21</td>\n",
+       "      <td>0.066809</td>\n",
+       "      <td>JCP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>161 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'companies_count': 1405,\n",
-       " 'market_cap': 9328748658688,\n",
-       " 'message_board_id': 'INDEXYH103',\n",
-       " 'description': 'Companies that provide financial services include banks, savings and loans, asset management companies, credit services, investment brokerage firms, and insurance companies. Companies in this sector include Allianz, JPMorgan Chase, and Legg Mason.',\n",
-       " 'industries_count': 15,\n",
-       " 'market_weight': 0.1459203,\n",
-       " 'employee_count': 5523304}"
+       "          DATE     VALUE       TYPE\n",
+       "0   2024-09-11  0.186602        JCP\n",
+       "1   2024-08-21  0.314481        JCP\n",
+       "2   2024-08-21  0.151861  Dividendo\n",
+       "3   2024-08-21  0.005606  Dividendo\n",
+       "4   2024-08-21  0.002707  Dividendo\n",
+       "..         ...       ...        ...\n",
+       "156 2007-12-25  0.071121        JCP\n",
+       "157 2007-11-13  0.042861  Dividendo\n",
+       "158 2007-09-21  0.067322        JCP\n",
+       "159 2007-08-14  0.019767  Dividendo\n",
+       "160 2007-06-21  0.066809        JCP\n",
+       "\n",
+       "[161 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sector.overview"
+    "cells = soup \\\n",
+    "    .find(class_=\"table-container\") \\\n",
+    "    .find_all(\"td\")\n",
+    "    \n",
+    "df_dividends = pd.DataFrame()\n",
+    "    \n",
+    "for row_idx in range(int(len(cells) / 5)):\n",
+    "    row_start = row_idx * 5\n",
+    "    row_end = row_start + 5\n",
+    "    row = cells[row_start : row_end]\n",
+    "    \n",
+    "    dividend = pd.DataFrame(\n",
+    "        {\n",
+    "        \"DATE\": row[2].text, \n",
+    "        \"VALUE\": float(row[1].text.replace(\"*\", \"\").replace(\",\", \".\")), \n",
+    "        \"TYPE\": row[0].text\n",
+    "        },\n",
+    "        index=[df_dividends.shape[0]]\n",
+    "        )\n",
+    "    \n",
+    "    df_dividends = pd.concat([df_dividends, dividend])\n",
+    "    \n",
+    "df_dividends[\"DATE\"] = pd.to_datetime(df_dividends[\"DATE\"], format=\"%d/%m/%Y\")\n",
+    "df_dividends"
    ]
   },
   {
