Created a file with B3 stocks sectors

--- a/prototypes/stock-historical-data.ipynb
+++ b/prototypes/stock-historical-data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,47 +130,38 @@
        " 'governanceEpochDate': 1727740800,\n",
        " 'maxAge': 86400,\n",
        " 'priceHint': 2,\n",
-       " 'previousClose': 26.9,\n",
-       " 'open': 27.0,\n",
-       " 'dayLow': 26.77,\n",
-       " 'dayHigh': 27.04,\n",
-       " 'regularMarketPreviousClose': 26.9,\n",
-       " 'regularMarketOpen': 27.0,\n",
-       " 'regularMarketDayLow': 26.77,\n",
-       " 'regularMarketDayHigh': 27.04,\n",
+       " 'previousClose': 26.52,\n",
+       " 'regularMarketPreviousClose': 26.52,\n",
        " 'dividendRate': 2.52,\n",
-       " 'dividendYield': 0.0937,\n",
+       " 'dividendYield': 0.0951,\n",
        " 'exDividendDate': 1726099200,\n",
        " 'payoutRatio': 0.3023,\n",
        " 'fiveYearAvgDividendYield': 4.5,\n",
        " 'beta': 0.774,\n",
-       " 'trailingPE': 3.870317,\n",
-       " 'forwardPE': 3.8759022,\n",
-       " 'volume': 11885200,\n",
-       " 'regularMarketVolume': 11885200,\n",
-       " 'averageVolume': 14845800,\n",
-       " 'averageVolume10days': 14714500,\n",
-       " 'averageDailyVolume10Day': 14714500,\n",
-       " 'bid': 26.87,\n",
-       " 'ask': 26.92,\n",
-       " 'marketCap': 153315803136,\n",
-       " 'fiftyTwoWeekLow': 23.89,\n",
+       " 'trailingPE': 3.814121,\n",
+       " 'forwardPE': 3.819625,\n",
+       " 'averageVolume': 14616286,\n",
+       " 'averageVolume10days': 14356170,\n",
+       " 'averageDailyVolume10Day': 14356170,\n",
+       " 'bid': 26.5,\n",
+       " 'ask': 26.51,\n",
+       " 'marketCap': 151375036416,\n",
        " 'fiftyTwoWeekHigh': 29.955,\n",
-       " 'priceToSalesTrailing12Months': 1.3817129,\n",
-       " 'fiftyDayAverage': 27.7742,\n",
-       " 'twoHundredDayAverage': 27.821924,\n",
+       " 'priceToSalesTrailing12Months': 1.3642223,\n",
+       " 'fiftyDayAverage': 27.7718,\n",
+       " 'twoHundredDayAverage': 27.7895,\n",
        " 'trailingAnnualDividendRate': 2.688,\n",
-       " 'trailingAnnualDividendYield': 0.09992565,\n",
+       " 'trailingAnnualDividendYield': 0.10135746,\n",
        " 'currency': 'BRL',\n",
-       " 'enterpriseValue': 743983349760,\n",
+       " 'enterpriseValue': 741757222912,\n",
        " 'profitMargins': 0.27981,\n",
        " 'floatShares': 2584327583,\n",
        " 'sharesOutstanding': 5707959808,\n",
        " 'heldPercentInsiders': 0.5,\n",
-       " 'heldPercentInstitutions': 0.2198,\n",
-       " 'impliedSharesOutstanding': 5707959808,\n",
+       " 'heldPercentInstitutions': 0.22205,\n",
+       " 'impliedSharesOutstanding': 5718739968,\n",
        " 'bookValue': 30.039,\n",
-       " 'priceToBook': 0.89417094,\n",
+       " 'priceToBook': 0.8811878,\n",
        " 'lastFiscalYearEnd': 1703980800,\n",
        " 'nextFiscalYearEnd': 1735603200,\n",
        " 'mostRecentQuarter': 1719705600,\n",
@@ -181,9 +172,9 @@
        " 'pegRatio': 1.31,\n",
        " 'lastSplitFactor': '2:1',\n",
        " 'lastSplitDate': 1713225600,\n",
-       " 'enterpriseToRevenue': 6.705,\n",
-       " '52WeekChange': 0.10557723,\n",
-       " 'SandP52WeekChange': 0.32645774,\n",
+       " 'enterpriseToRevenue': 6.685,\n",
+       " '52WeekChange': 0.07776868,\n",
+       " 'SandP52WeekChange': 0.3478098,\n",
        " 'lastDividendValue': 0.186602,\n",
        " 'lastDividendDate': 1726099200,\n",
        " 'exchange': 'SAO',\n",
@@ -198,7 +189,7 @@
        " 'uuid': 'a7840cde-81bb-30bc-b4bc-a3b2546ff1dc',\n",
        " 'messageBoardId': 'finmb_874155',\n",
        " 'gmtOffSetMilliseconds': -10800000,\n",
-       " 'currentPrice': 26.86,\n",
+       " 'currentPrice': 26.47,\n",
        " 'targetHighPrice': 45.0,\n",
        " 'targetLowPrice': 17.5,\n",
        " 'targetMeanPrice': 34.0,\n",
@@ -221,7 +212,7 @@
        " 'trailingPegRatio': None}"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,17 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get historical market data\n",
-    "hist = bbas3.history(period=\"2y\")"
+    "hist = bbas3.history(period=\"1y\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,35 +246,35 @@
        " 'fullExchangeName': 'São Paulo',\n",
        " 'instrumentType': 'EQUITY',\n",
        " 'firstTradeDate': 946900800,\n",
-       " 'regularMarketTime': 1728072465,\n",
+       " 'regularMarketTime': 1729022820,\n",
        " 'hasPrePostMarketData': False,\n",
        " 'gmtoffset': -10800,\n",
        " 'timezone': 'BRT',\n",
        " 'exchangeTimezoneName': 'America/Sao_Paulo',\n",
-       " 'regularMarketPrice': 26.86,\n",
-       " 'fiftyTwoWeekHigh': 27.04,\n",
-       " 'fiftyTwoWeekLow': 26.77,\n",
-       " 'regularMarketDayHigh': 27.04,\n",
-       " 'regularMarketDayLow': 26.77,\n",
-       " 'regularMarketVolume': 11885200,\n",
+       " 'regularMarketPrice': 26.47,\n",
+       " 'fiftyTwoWeekHigh': 0.0,\n",
+       " 'fiftyTwoWeekLow': 0.0,\n",
+       " 'regularMarketDayHigh': 0.0,\n",
+       " 'regularMarketDayLow': 0.0,\n",
+       " 'regularMarketVolume': 0,\n",
        " 'longName': 'Banco do Brasil S.A.',\n",
        " 'shortName': 'BRASIL      ON      NM',\n",
-       " 'chartPreviousClose': 19.615,\n",
+       " 'chartPreviousClose': 24.41,\n",
        " 'priceHint': 2,\n",
        " 'currentTradingPeriod': {'pre': {'timezone': 'BRT',\n",
-       "   'start': 1728045900,\n",
-       "   'end': 1728046800,\n",
+       "   'start': 1729082700,\n",
+       "   'end': 1729083600,\n",
        "   'gmtoffset': -10800},\n",
        "  'regular': {'timezone': 'BRT',\n",
-       "   'start': 1728046800,\n",
-       "   'end': 1728072000,\n",
+       "   'start': 1729083600,\n",
+       "   'end': 1729108800,\n",
        "   'gmtoffset': -10800},\n",
        "  'post': {'timezone': 'BRT',\n",
-       "   'start': 1728072000,\n",
-       "   'end': 1728075600,\n",
+       "   'start': 1729108800,\n",
+       "   'end': 1729112400,\n",
        "   'gmtoffset': -10800}},\n",
        " 'dataGranularity': '1d',\n",
-       " 'range': '2y',\n",
+       " 'range': '1y',\n",
        " 'validRanges': ['1d',\n",
        "  '5d',\n",
        "  '1mo',\n",
@@ -297,7 +288,7 @@
        "  'max']}"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -343,34 +334,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2014-11-17 00:00:00-02:00</th>\n",
-       "      <td>0.027859</td>\n",
+       "      <th>2023-12-12 00:00:00-03:00</th>\n",
+       "      <td>0.171153</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2014-12-12 00:00:00-02:00</th>\n",
-       "      <td>0.169975</td>\n",
+       "      <th>2024-03-12 00:00:00-03:00</th>\n",
+       "      <td>0.205018</td>\n",
        "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-02-20 00:00:00-02:00</th>\n",
-       "      <td>0.045600</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-03-24 00:00:00-03:00</th>\n",
-       "      <td>0.188496</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-05-22 00:00:00-03:00</th>\n",
-       "      <td>0.225569</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-04-16 00:00:00-03:00</th>\n",
@@ -399,28 +370,21 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>78 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                           Dividends  Stock Splits\n",
        "Date                                              \n",
-       "2014-11-17 00:00:00-02:00   0.027859           0.0\n",
-       "2014-12-12 00:00:00-02:00   0.169975           0.0\n",
-       "2015-02-20 00:00:00-02:00   0.045600           0.0\n",
-       "2015-03-24 00:00:00-03:00   0.188496           0.0\n",
-       "2015-05-22 00:00:00-03:00   0.225569           0.0\n",
-       "...                              ...           ...\n",
+       "2023-12-12 00:00:00-03:00   0.171153           0.0\n",
+       "2024-03-12 00:00:00-03:00   0.205018           0.0\n",
        "2024-04-16 00:00:00-03:00   0.000000           2.0\n",
        "2024-06-12 00:00:00-03:00   0.457947           0.0\n",
        "2024-06-14 00:00:00-03:00   0.204240           0.0\n",
        "2024-08-22 00:00:00-03:00   0.474655           0.0\n",
-       "2024-09-12 00:00:00-03:00   0.186602           0.0\n",
-       "\n",
-       "[78 rows x 2 columns]"
+       "2024-09-12 00:00:00-03:00   0.186602           0.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,21 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Date\n",
-       "2022-11-22 00:00:00-03:00    0.085103\n",
-       "2022-12-13 00:00:00-03:00    0.172763\n",
-       "2023-02-24 00:00:00-03:00    0.413441\n",
-       "2023-03-14 00:00:00-03:00    0.176018\n",
-       "2023-06-02 00:00:00-03:00    0.061504\n",
-       "2023-06-13 00:00:00-03:00    0.169316\n",
-       "2023-08-22 00:00:00-03:00    0.073423\n",
-       "2023-09-12 00:00:00-03:00    0.167099\n",
        "2023-12-12 00:00:00-03:00    0.171153\n",
        "2024-03-12 00:00:00-03:00    0.205018\n",
        "2024-06-12 00:00:00-03:00    0.457947\n",
@@ -455,7 +411,7 @@
        "Name: Dividends, dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
